<?xml version="1.0"?>
<package format="2">
  <name>k4a</name>
  <version>0.0.0</version>
  <description>The Microsoft Azure Kinect package</description>

  <maintainer email="taku8926@gmail.com">Takuya Kiyokawa</maintainer>
  <author email="taku8926@gmail.com">Takuya Kiyokawa</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
